force-app/main/default/objects/Report_Subscription__mdt/fields/Column_1__c.field-meta.xml
<CustomField>
    <fullName>Column_1__c</fullName>
    <label>Column 1</label>
    <metadataRelationshipControllingField>Report_Subscription__mdt.Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Report_Subscriptions</relationshipLabel>
    <relationshipName>Report_Subscriptions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>