force-app/main/default/objects/Report_Subscription__mdt/fields/Column_2__c.field-meta.xml
<CustomField>
    <fullName>Column_2__c</fullName>
    <label>Column 2</label>
    <metadataRelationshipControllingField>Report_Subscription__mdt.Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Report_Subscriptions1</relationshipLabel>
    <relationshipName>Report_Subscriptions1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>