force-app/main/default/objects/Report_Subscription__mdt/fields/Column_3__c.field-meta.xml
<CustomField>
    <fullName>Column_3__c</fullName>
    <label>Column 3</label>
    <metadataRelationshipControllingField>Report_Subscription__mdt.Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Report_Subscriptions2</relationshipLabel>
    <relationshipName>Report_Subscriptions2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>