force-app/main/default/objects/Report_Subscription__mdt/fields/Field_API_Names_CSV__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Names_CSV__c</fullName>
    <label>Field API Names CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>