force-app/main/default/objects/Report_Subscription__mdt/fields/Headers_CSV__c.field-meta.xml
<CustomField>
    <fullName>Headers_CSV__c</fullName>
    <label>Headers CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>