force-app/main/default/objects/Report_Subscription__mdt/fields/Output_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Output_File_Name__c</fullName>
    <label>Output File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>