force-app/main/default/objects/Report_Subscription__mdt/fields/Report_Format__c.field-meta.xml
<CustomField>
    <fullName>Report_Format__c</fullName>
    <description>Choose Details Only to export only the detail rows. Use this to do further calculations or for uploading to other systems. Choose Formatted Report to export the report, including the report header, groupings, and filter settings.</description>
    <inlineHelpText>Choose Details Only to export only the detail rows. Use this to do further calculations or for uploading to other systems. Choose Formatted Report to export the report, including the report header, groupings, and filter settings.</inlineHelpText>
    <label>Report Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Details Only</fullName>
                <default>true</default>
                <label>Details Only</label>
            </value>
            <value>
                <fullName>Formatted Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>