force-app/main/default/objects/Report_Subscription__mdt/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <description>The name of the report to be delivered</description>
    <inlineHelpText>The name of the report to be delivered</inlineHelpText>
    <label>Report Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>