force-app/main/default/objects/Report_Subscription__mdt/fields/Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Display_Name__c</fullName>
    <label>Sender Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>