force-app/main/default/objects/Report_Subscription__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The primary data table to include in the report</description>
    <inlineHelpText>The primary data table to include in the report</inlineHelpText>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Report_Subscriptions</relationshipLabel>
    <relationshipName>Report_Subscriptions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>