force-app/main/default/objects/Report_Subscription__mdt/fields/To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>To_Addresses__c</fullName>
    <description>Email addresses to send results to, separated by commas</description>
    <inlineHelpText>Email addresses to send results to, separated by commas</inlineHelpText>
    <label>To Addresses</label>
    <type>TextArea</type>
</CustomField>