force-app/main/default/objects/Report_Subscription__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Report</fullName>
            </value>
            <value>
                <fullName>Metadata Relationship</fullName>
            </value>
            <value>
                <fullName>SOQL Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>