force-app/main/default/objects/Report_Subscription__mdt/validationRules/Metadata_Relationship_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Metadata_Relationship_Required_Fields</fullName>
    <active>true</active>
    <description>Enforces required fields for Metadata Relationship subscriptions</description>
    <errorConditionFormula>AND( 
  ISPICKVAL( Type__c, &quot;Metadata Relationship&quot; ), 
  OR(
    ISBLANK( TEXT( Source_Object__c ) ), 
    ISBLANK( TEXT( Column_1__c ) )
  )
)</errorConditionFormula>
    <errorMessage>Metadata relationship subscriptions must contain a source object and at least one defined column</errorMessage>
</ValidationRule>