force-app/main/default/objects/Report_Subscription__mdt/validationRules/Salesforce_Report_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_Report_Required_Fields</fullName>
    <active>true</active>
    <description>Enforces required fields for Salesforce Report subscriptions</description>
    <errorConditionFormula>AND( 
  ISPICKVAL( Type__c, &quot;Salesforce Report&quot; ), 
  OR(
    ISBLANK( Report_Name__c ), 
    ISBLANK( TEXT( Report_Format__c ) )
  )
)</errorConditionFormula>
    <errorMessage>Salesforce Report subscriptions must contain a report name and format</errorMessage>
</ValidationRule>