force-app/main/default/objects/Report_Subscription__mdt/listViews/All_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Subscriptions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Subscriptions</label>
    <language>en_US</language>
</ListView>